Dark mode - Fix footers (#88)
* Partially fix footers

* Update skin-black-dark.less

* Update skin-black-dark.less

* Update skin-blue-dark.less

* Update skin-black-dark.less

* Apply suggestions from code review

* Update resources/assets/less/skins/skin-blue-dark.less

* Update CSS

* Delete public/issues.txt

* Apply suggestions from code review

--- a/resources/assets/less/skins/skin-black-dark.less
+++ b/resources/assets/less/skins/skin-black-dark.less
@@ -382,7 +382,11 @@ input[type=text], input[type=search] {
 .skin-black-dark .main-header .navbar .dropdown-menu li a:hover {
   background-color: #000000;
 }
-.fixed-table-body thead th .th-inner, .skin-black-dark .sidebar-menu>li.active>a, .skin-black .sidebar-menu>li:hover>a, .sidebar-toggle:hover {
+.fixed-table-body thead th .th-inner,
+.fixed-table-body tfoot th .th-inner,
+.skin-black-dark .sidebar-menu>li.active>a,
+.skin-black .sidebar-menu>li:hover>a,
+.sidebar-toggle:hover {
   background-color: var(--header)!important;
 }
 .tab-content, .tab-pane {
