--- a/resources/assets/less/skins/skin-green-dark.less
+++ b/resources/assets/less/skins/skin-green-dark.less
@@ -268,7 +268,8 @@ body {
   background-color: var(--back-main);
   color: var(--nav-link);
 }
-.fixed-table-body thead th .th-inner{
+.fixed-table-body thead th .th-inner,
+.fixed-table-body tfoot th .th-inner {
   color: var(--nav-link);
 }
 .form-control {
@@ -356,7 +357,11 @@ input[type=text], input[type=search] {
 .skin-green-dark .main-header .navbar .dropdown-menu li a:hover {
   background-color: #006300;
 }
-.fixed-table-body thead th .th-inner, .skin-green-dark .sidebar-menu>li.active>a, .skin-green .sidebar-menu>li:hover>a, .sidebar-toggle:hover {
+.fixed-table-body thead th .th-inner,
+.fixed-table-body tfoot th .th-inner,
+.skin-green-dark .sidebar-menu>li.active>a,
+.skin-green .sidebar-menu>li:hover>a,
+.sidebar-toggle:hover {
   background-color: var(--header)!important;
 }
 .tab-content, .tab-pane {
